--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </form>
 
     <!-- Verfiy code -->
-    <button id="authenticator_form" onclick="authenticate()">Authenticate</button>
+    <button id="authenticator_button" onclick="authenticate()">Authenticate</button>
 
     <!-- Display a countdown for when the next code will be generated -->
     <h5 id="countdown">A new 6 digit code is generated every 10 seconds</h5>
