--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button id="authenticator_button" onclick="authenticate()">Authenticate</button>
 
     <!-- Display a countdown for when the next code will be generated -->
-    <h5 id="countdown">A new 6 digit code is generated every 10 seconds</h5>
+    <h5 id="countdown">A new 6 digit number will be generated every 10 seconds</h5>
     
 <script src="script.js"></script>    
 </body>
