--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <!-- Display a countdown for when the next code will be generated -->
     <h5 id="countdown">A new 6 digit number will be generated every 10 seconds</h5>
     
+    <footer> 
+        <h6>2FA by Corpusssy</h6>
+    </footer>
 <script src="script.js"></script>    
 </body>
 </html>
