--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Display randomly generated 6 digit code here -->
-    <h2 id="authenticator_code">######</h2>
+    <h2 id="authenticator_code"></h2>
 
     <!-- Enter randomly generated 6 digit code here -->
     <form>
@@ -21,11 +21,12 @@
     <button id="authenticator_button" onclick="authenticate()">Authenticate</button>
 
     <!-- Display a countdown for when the next code will be generated -->
-    <h5 id="countdown">A new 6 digit number will be generated every 10 seconds</h5>
+    <h5 id="countdown"></h5>
     
     <footer> 
         <h6>2FA by Corpusssy</h6>
     </footer>
+    
 <script src="script.js"></script>    
 </body>
 </html>
