--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"></link>
     <title>2FA Clone</title>
+
+    <link rel="icon" type="image/x-icon" href="favicon.jpg">
 </head>
 
 <body>
