--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <br>
 
     <div id="context">
-        <h4>What is a Two-Factor Authentication (2FA) and what is it used for?</h4>
+        <h4>What is Two-Factor Authentication (2FA) and what is it used for?</h4>
         <h5>2FA is an extra layer of security used to make sure that people trying to gain access to an online account are who they say they are. This helps prevent anyone from gaining unauthorized access to an account or system, as well as preventing them from making any unauthorized changes to the account or system.</h5>
         <h5>Click <a href="https://authy.com/what-is-2fa/">here</a> to learn more about Two-Factor Authentication</h5>
     </div>
