--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"></link>
-    <title>2FA Clone</title>
+    <title>Random Authentication Code Generator</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.jpg">
 </head>
@@ -33,17 +33,12 @@
     <br>
 
     <div id="context">
-        <!--
-        <h4>What is Two-Factor Authentication (2FA) and what is it used for?</h4>
-        <h5>2FA is an extra layer of security used to make sure that people trying to gain access to an online account are who they say they are. This helps prevent anyone from gaining unauthorized access to an account or system, as well as preventing them from making any unauthorized changes to the account or system.</h5>
-        -->
-        <h5>Click <a href="https://authy.com/what-is-2fa/">here</a> to learn more about Two-Factor Authentication</h5>
+        <h5>Click <a href="https://simplicable.com/new/authentication-code">here</a> to learn more about authentication codes</h5>
     </div>
     
     <!-- Credits -->
     <footer> 
-        <h6>2FA by Corpusssy</h6>
-        <h6>Made with JavaScript</h6>
+        <h6>This small project was made by mtlfriends with simple JavaScript</h6>
     </footer>
     
 <script src="script.js"></script>    
